# Becend_fastAPI

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  index.html  postgresql.conf  pyproject.toml  start_postgres_in_docker.sh
migrations/: env.py
migrations/versions/: 2a1965bbed93_.py  2a432dc28bc7_new_pk_for_user.py  9fa1a70e5d81_add_index.py  a0ce6648c5fa_initial_revision.py
src/: config.py  main.py
src/adapter/db/: session.py
src/adapter/ollama/: llm_calls.py
src/model/: note.py  notes.py  user.py
src/repository/: note.py  user.py
src/route/: notes.py  users.py
src/scheme/: notes.py  users.py
src/service/: notes.py  users.py
src/utils/: repository.py
